--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,21 @@
     <hadoop.version>2.6.5</hadoop.version>
   </properties>
 
-  <repositories>
+ <!-- <repositories>
     <repository>
       <id>scala-tools.org</id>
       <name>Scala-Tools Maven2 Repository</name>
       <url>http://scala-tools.org/repo-releases</url>
+    </repository>
+  </repositories>-->
+  <repositories>
+    <repository>
+      <id>nexus-public</id>
+      <url>http://10.1.251.240:8081/nexus/content/groups/public</url>
+    </repository>
+    <repository>
+      <id>nexus-public-snapshots</id>
+      <url>http://10.1.251.240:8081/nexus/content/groups/public-snapshots</url>
     </repository>
   </repositories>
 
@@ -181,6 +191,16 @@
           <scalaVersion>${scala.version}</scalaVersion>
         </configuration>
       </plugin>
+      <!--<plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+          <compilerArgument>-g</compilerArgument>
+          <source>1.8</source>
+          <target>1.8</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>-->
     </plugins>
   </reporting>
 </project>
